--- a/index.html
+++ b/index.html
@@ -38,10 +38,52 @@
          </div>
          <br>
          <br>
-      <div id="playlist">
-       
-
-      </div>
+         <a onclick="two()">
+            <div class="ball">
+               <div class="num">
+                  2
+               </div>
+            </div>
+            <div class="text">
+               2020 World's most powerful CW handheld laser
+            </div>
+         </a>
+         <br>
+         <br>
+         <a onclick="three()">
+            <div class="ball">
+               <div class="num">
+                  3
+               </div>
+            </div>
+            <div class="text">
+               Iron Man Plasma Glove CUTS THROUGH EVERYTHING! (+ GIVEAWAY)
+            </div>
+         </a>
+         <br>
+         <br>
+         <a onclick="four()">
+            <div class="ball">
+               <div class="num">
+                  4
+               </div>
+            </div>
+            <div class="text">
+               Jet Suit Flying Paradise!
+            </div>
+         </a>
+         <br>
+         <br>
+         <a onclick="five()">
+            <div class="ball">
+               <div class="num">
+                  5
+               </div>
+            </div>
+            <div class="text">
+               Backyard UNDERGROUND Apocalyptic BUNKER
+            </div>
+         </a>
       </div>
    </div>
 
